Update bundles/org.openhab.binding.hue/src/main/java/org/openhab/binding/hue/internal/api/dto/clip2/SoundStatus.java
Co-authored-by: Jacob Laursen <jacob-github@vindvejr.dk>
Signed-off-by: Andrew Fiddian-Green <software@whitebear.ch>